--- a/main.tex
+++ b/main.tex
@@ -73,6 +73,7 @@
 \include{00-Introduction/source}
 \mainmatter
 \include{01-Modularite/source}
+\include{01bis-Architectures/source}
 \include{02-SOM/source}
 \include{03-Representation/source}
 \include{04-Analyse/source}
